src/CalenderPage/Calender/Calendar.module.css
.calendarContainer {
    padding: 25px;
    max-width: 1200px;
    width: 100%;
    margin: 0 auto;
  }
  
  .customCalendar {
    width: 100%;
    font-family: Arial, sans-serif;
  }
  
  .eventContent {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 5px;
    height: 30px;
    transition: height 0.3s ease;
    cursor: pointer;
  }
  
  .eventTitle {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    width: 100%;
  }
  
  .eventContent.expanded {
    height: auto;
    padding: 10px;
  }
  
  @media (max-width: 768px) {
    .calendarContainer {
        padding: 10px;
    }
    .eventContent {
      width: 100%;
      height: 50px;
    }
  
    .eventContent.expanded {
      height: auto;
      padding: 15px;
    }
  
    .eventTitle {
      white-space: normal;
    }
  }
  

